--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omar Al-Madhagi - CV Attachments</title>
+    <title>Omar Al-Madhagi also known as Omar Al-Awlaqi- CV Attachments</title>
     <meta name="description" content="Professional attachments, certificates, and links for Omar Al-Madhagi's CV">
     
     <!-- Fonts -->
